版本号->edition, 并且使用了全局变量hash

--- a/editon/src/index.ejs
+++ b/editon/src/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title><%= 'v'+ BUILT_AT %></title>
+	<title><%= 'v'+ BUILT_AT + 'hash'+__webpack_hash__  %></title>
 	<!-- "title + VERSION" + -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
