--- a/多个htmlN命令行Nc24nNi18n/src/rei.ejs
+++ b/多个htmlN命令行Nc24nNi18n/src/rei.ejs
@@ -6,6 +6,7 @@
 	<title>用react配合i18n, node和web共存, dev和prod分开</title>
 </head>
 <body>
+	这里吗?
 	<div id="reactcontainer">这里是react的根</div>
 </body>
 </html>
